# warframe-public-export-parser

./: .gitignore  pyproject.toml
warframe_public_export_parser/: __main__.py
