[tool.poetry]
name = "warframe-public-export-parser"
version = "0.1.0"
description = ""
authors = ["Nick <9609041+0niSec@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.8"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
